# Relation_db

./: main.py
DB/: pyproject.toml
DB/db/: bulk_table.sql  change_to_table.py  create_table.py  db_connect.py  insert_to_table.py  select_to_table.py  update_pn.py  update_to_table..py
Sql_bd/: create_table.sql
hw/: drop_or_create_table.sql  seeds.py  select_1.sql  select_10.sql  select_2.sql  select_3.sql  select_4.sql  select_6.sql  select_7.sql  select_8.sql  select_9.sql  selects.py  test.py
sql_alchemy/Alchemy/: config.ini  pyproject.toml
sql_alchemy/Alchemy/alchemy/: my_base.sqlite  signup.py  test.py  todo.py
sql_alchemy/Alchemy/alchemy/database/: crud.py  db.py  models.py
sql_alchemy/Alchemy/examples/: async_alchemy.py  core_example.py  new_session.py  sessions.py
